[project]
name = "data-fusion2026-heroes"
version = "0.1.0"
description = "Open source project for Data Fusion 2026 - Heroes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.6.1",
    "ortools>=9.15.6755",
    "polars>=1.38.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
